src/objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Service_Tax__c</fullName>
        <label>Account Name (GST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_1__c</fullName>
        <label>Account Number 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_2__c</fullName>
        <label>Account Number 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_Service_tax__c</fullName>
        <label>Account Number(GST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number(Unit Cost)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Area__c</fullName>
        <formula>Unit_No__r.Actual_Area_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advance_Registration_Reference_No__c</fullName>
        <label>Advance Registration Reference No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advance registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allotment_Premium__c</fullName>
        <description>Allotment Premium (Agreement Value)</description>
        <label>Allotment Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Form_No__c</fullName>
        <displayFormat>BOOK{0000}</displayFormat>
        <label>Application No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Application_No__c</fullName>
        <label>Application No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_from_account_team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved from account team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_from_tech_team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved from tech team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Loan_Status__c</fullName>
        <label>Bank Loan Status</label>
        <picklist>
            <controllingField>Funding_Status__c</controllingField>
            <picklistValues>
                <fullName>Sanctioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need help to apply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Name_1__c</fullName>
        <label>Bank Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name_2__c</fullName>
        <label>Bank Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name_Service_tax__c</fullName>
        <label>Bank Name(GST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank Name(Unit Cost)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic_Booking_Amount__c</fullName>
        <label>Basic Booking Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BookingIId__c</fullName>
        <label>BookingIId</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BookingNo__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>BookingNo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Booking Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Source_CP_New__c</fullName>
        <formula>IF( ISBLANK(  Customer__r.Walk_in_Channel_Partner_Name__c ) , &quot;N/A&quot;, &quot;Name - &quot;+  Customer__r.Walk_in_Channel_Partner_Name__c +&quot; | Contact - &quot;+  Customer__r.Walk_in_Channel_Partner_Phone__c +&quot; | Email - &quot;+  Customer__r.Walk_in_Channel_Partner_Email__c )</formula>
        <label>Booking Source (CP New)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Source_CP_Registered__c</fullName>
        <formula>IF( ISBLANK( Customer__r.Walk_in_Channel_Partner__c ) , &quot;N/A&quot;, &quot;Name - &quot;+  Customer__r.Walk_in_Channel_Partner__r.Name +&quot; | Contact - &quot;+ Customer__r.Walk_in_Channel_Partner_Contact_Number__c +&quot; | Code - &quot;+ Customer__r.Walk_in_Channel_Partner__r.Broker_Code__c +&quot; | Email - &quot;+   Customer__r.Walk_in_Channel_Partner__r.Email_ID__c   )</formula>
        <label>Booking Source (CP Registered)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Source_Details__c</fullName>
        <label>Booking Source Details</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Source_Reference_By_Employee__c</fullName>
        <formula>IF( ISBLANK(Customer__r.Walk_in_Employee_Name__c) , &quot;N/A&quot;, &quot;Name - &quot;+Customer__r.Walk_in_Employee_Name__c+&quot; | Id - &quot;+Customer__r.Walk_in_Employee_Id__c)</formula>
        <label>Booking Source (Reference By Employee)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Source_Reference_By_Others__c</fullName>
        <formula>IF( ISBLANK( Customer__r.Name_O__c) , &quot;N/A&quot;, &quot;Name - &quot;+Customer__r.Name_O__c+&quot; | Mobile -&quot;+ Customer__r.Mobile_No_O__c +&quot; | Email - &quot;+ Customer__r.Email_Id_O__c +&quot; | Relation - &quot;+ Customer__r.Relation_With_Radius_O__c )</formula>
        <label>Booking Source (Reference By Others)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Source_Reference_by_Customer__c</fullName>
        <formula>IF(ISBLANK(Customer__r.Walk_in_Respective_Customer_Account__c) , &quot;N/A&quot;, &quot;Customer Name - &quot;+ 
TEXT(Customer__r.Walk_in_Respective_Customer_Account__r.Salutation)+
Customer__r.Walk_in_Respective_Customer_Account__r.FirstName + &quot; &quot;+
Customer__r.Walk_in_Respective_Customer_Account__r.LastName)</formula>
        <label>Booking Source (Reference by Customer)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_1__c</fullName>
        <label>Branch 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_2__c</fullName>
        <label>Branch 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrokerIId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Id</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Booking20</relationshipLabel>
        <relationshipName>Booking20</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Code__c</fullName>
        <label>Channel Partner Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <label>Channel Partner Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_Amount__c</fullName>
        <label>Brokerage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brokerage__c</fullName>
        <label>Brokerage %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Call_Back_Date__c</fullName>
        <label>Call Back Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Centre_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Centre Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BookingRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Disposition_L2__c</fullName>
        <label>Call Disposition L2</label>
        <picklist>
            <picklistValues>
                <fullName>Greetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-allocation not done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Constraints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency on Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency on CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency on Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <label>Call Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Welcome call accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome call rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong number/No Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ringing/Switched Off/Not reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call back request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carpet_Area__c</fullName>
        <label>Carpet Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagpur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commission Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>Legal_Entity__c</referenceTo>
        <relationshipLabel>Booking</relationshipLabel>
        <relationshipName>Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consideration_Value__c</fullName>
        <formula>IF((Quotation__r.Agreement_Value_D__c != 0), Quotation__r.Agreement_Value__c, Quotation__r.Agreement_Value_D__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consideration Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_No_of_Referer_Customer_Custome__c</fullName>
        <label>Contact No. of Referer Customer (Custome</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Booking</relationshipLabel>
        <relationshipName>Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credited_Amount__c</fullName>
        <label>Credited Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cretaed_On__c</fullName>
        <label>Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Booking</relationshipLabel>
        <relationshipName>Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_for_offer_of_Possession__c</fullName>
        <label>Date for offer of Possession</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Cancellation__c</fullName>
        <label>Date of Cancellation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <formula>TEXT( Quotation__r.Total_Dependent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dispatch_Mode__c</fullName>
        <label>Dispatch Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Soft Copy via Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft copy via email and hardcopy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Checklist_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Checklist Header</label>
        <referenceTo>Document_Checklist_Header__c</referenceTo>
        <relationshipLabel>Booking</relationshipLabel>
        <relationshipName>Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Checklist_Link_del__c</fullName>
        <formula>IF( AND(NOT(ISPICKVAL(Status__c, &quot;UnProcessed&quot;)),NOT(ISPICKVAL( Status__c,&quot;Cancelled&quot; )),NOT(ISPICKVAL( Verification_status__c,&quot;Accepted&quot; ))), HYPERLINK(&quot;https://ap6.salesforce.com/apex/NewDocumentChecklistPage?Id=&quot;+Id,&quot;Click Here&quot; ), &quot;&quot;)</formula>
        <label>Document Checklist Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclusive_Area__c</fullName>
        <formula>Unit_No__r.Exclusive_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclusive Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Registration_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Expected Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flat_Applicants__c</fullName>
        <label>Unit Applicants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_No__c</fullName>
        <label>Unit No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_Typology__c</fullName>
        <label>Unit Typology</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor1__c</fullName>
        <label>Floor1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Status__c</fullName>
        <label>Funding Status</label>
        <picklist>
            <picklistValues>
                <fullName>Self Funded</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subvention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Future_Correspondence_Contact_Email__c</fullName>
        <label>Future Correspondence Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Future_Correspondence_Contact_Name__c</fullName>
        <label>Future Correspondence Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Correspondence_Contact_Phone__c</fullName>
        <label>Future Correspondence Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Future_Correspondence_Contact_Relation__c</fullName>
        <label>Future Correspondence Contact Relation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Correspondence_Contact__c</fullName>
        <label>Future Correspondence Contact</label>
        <picklist>
            <picklistValues>
                <fullName>1st Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFSC_Code_1__c</fullName>
        <label>IFSC Code 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_Code_2__c</fullName>
        <label>IFSC Code 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_Code_Flat_Cost__c</fullName>
        <label>IFSC Code(Unit Cost)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_Code_Service_Tax__c</fullName>
        <label>IFSC Code(GST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Independent__c</fullName>
        <formula>TEXT( Quotation__r.Total_Independent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Independent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_Date__c</fullName>
        <label>Last Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_One_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level One Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Booking1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_Three_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level Three Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Booking3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_Two_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level Two Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Booking2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MG_Effect_Date__c</fullName>
        <label>MG Effect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MG_Mon_Year_Val__c</fullName>
        <label>MG Mon./Year Val.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MG_Months_Year__c</fullName>
        <label>MG Months/Year</label>
        <picklist>
            <picklistValues>
                <fullName>Month(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years(s)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MG_Per_Amt_Val__c</fullName>
        <label>MG Per./Amt. Val.</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MG_Per_Amt__c</fullName>
        <label>MG Per./Amt.</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NAme1__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAme1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Referer_Customer_Customer_Refer__c</fullName>
        <label>Name of Referer Customer (Customer Refer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Referer_Direct_Corporate_Book__c</fullName>
        <label>Name of Referer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Parking__c</fullName>
        <label>No. of Parking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_parking__c</fullName>
        <formula>Quotation__r.No_of_parking__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of parking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>notEqual</operation>
                <value>Booking confirmed, Closed Lost</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Booking (Opportunity)</relationshipLabel>
        <relationshipName>Booking1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parking_Type__c</fullName>
        <label>Parking Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <formula>Quotation__r.PaymentPlan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_Email__c</fullName>
        <label>Primary Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Booking</relationshipLabel>
        <relationshipName>Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_of_Referer_Customer_Customer_Re__c</fullName>
        <label>Project of Referer Customer (Customer Re</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Purchase__c</fullName>
        <formula>TEXT(Opportunity__r.Purpose__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purpose of Purchase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puzzle__c</fullName>
        <formula>TEXT( Quotation__r.Total_Puzzle__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puzzle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quotation</label>
        <referenceTo>Quotation__c</referenceTo>
        <relationshipLabel>Booking</relationshipLabel>
        <relationshipName>Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_For_CRM_returns_to_sales__c</fullName>
        <label>Reason For CRM returns to sales</label>
        <picklist>
            <picklistValues>
                <fullName>Physical Document Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Call Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_For_Cancellation__c</fullName>
        <label>Reason For Cancellation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Receipts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Receipt__c.Project_Unit__c</field>
                <operation>equals</operation>
                <valueField>$Source.Unit_No__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Receipt__c</referenceTo>
        <relationshipLabel>Booking</relationshipLabel>
        <relationshipName>Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reg_No__c</fullName>
        <label>Reg.No</label>
        <length>204</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ST_Token_Amount__c</fullName>
        <label>Service Tax on Token Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Booking4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BookingSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Managers__c</fullName>
        <label>Sales Managers</label>
        <picklist>
            <picklistValues>
                <fullName>Namonarayan Shirothiya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav Baranwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkin Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Bafna </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratima Soni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkeen Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaibhav Andhare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal Takle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Harale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Tripathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiran Shinde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaseem Patel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitin Deshpande</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayank Yadav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sajesh Pattanaik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Jadhav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yash Kothari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akhil Chaturvedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav Herwade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarfraz Syed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pavan Shinde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadip Thakur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prashant Kalal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atul Chordia </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratik Paleja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eram Kittur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Welcome_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Welcome Email And SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceReceipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service  Receipt</label>
        <referenceTo>Receipt__c</referenceTo>
        <relationshipLabel>Booking (Service  Receipt)</relationshipLabel>
        <relationshipName>Booking1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sharing_Per_Amt_Val__c</fullName>
        <label>Sharing Per./Amt. Val.</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sharing_Per_Amt__c</fullName>
        <label>Sharing Per./Amt.</label>
        <picklist>
            <picklistValues>
                <fullName>Sharing Per./Amt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Details__c</fullName>
        <label>Source Details</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>